# python-github-runner

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: checkout_test.yml  node_test.yml  self-hosted-test.yml  stress_test.yml
docker/: docker-compose.yml
python_github_action/: config.py  main.py
python_github_action/api/: runners.py
python_github_action/domain/: runner.py  runner_create.py
python_github_action/infra/: filesystem.py
python_github_action/services/: runner_factory.py
